2009-01-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: Fix nil pointer exception.
	* Source/NSScrollView.m: Fix to notice theme activation and support
	themed color for separators.

2009-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m,
	* Source/NSToolbar.m,
	* Source/GSToolbarView.m: Revert the relationship between
	NSToolbar and GSToolbarView, now the toolbar retains the view.
	
2009-01-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Add support for setting color of named parts.

2009-01-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.m: No longer adjust the size of
	the content view, when a toolbar is added, removed or resized.

2009-01-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/NSScroller.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Extend element naming API to support temporary elements ... ones
	which are 'owned' by a particular theme instance and automatically
	removed when the theme deactivates.
	Changed scroller code to use this for the shared scroller parts.

2009-01-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSController.h,
	* Source/NSController.m: Add one 10.4 method.
	* Headers/AppKit/NSUserDefaultsController.h: Add one 10.4 method.
	* Source/NSUserDefaultsController.m: Fully implement class.

2009-01-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScroller.m: Fixup/reorganisation of setting names for
	components parts of scroller for theming.
	* Source/GSThemeDrawing.m: Fix memory leak spotted by Fred.

2009-01-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSTheme.m:
	* Source/NSButtonCell.m:
	* Source/NSScroller.m:
	* Source/GSThemeDrawing.m:
	Add methods to name specific elements in the gui so that we can
	locate resources for them and so that override methods can handle